Revert "Merge pull request #5 from Denis92/dev_branch"
This reverts commit 792cf8636cfa23cb5daed7433e6dda3c1d233b32, reversing
changes made to fd08d8bb00b29531a7a39a081387ca3c647b9fc0.

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -58,10 +58,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'basket:view' %}" class="nav-link">
-                            {% if basket %}
-                                Корзина ({{ basket.0.basket_total_quantity }}. шт)
-                            {% endif %}
+                        <a href="" class="nav-link">
+                            Корзина (общая сумма заказа: {{ price_all }}. руб)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            (общее количество товаров: {{ quantity_all }} шт)
                         </a>
                     </li>
                 {% else %}
@@ -76,17 +79,13 @@
                         </a>
                     </li>
                 {% endif %}
-                {% if user.is_superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admin_custom:users' %}">Админка</a>
-                    </li>
-                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 
 {% block content %}
+
 {% endblock %}
 <footer>
     <div class="container-fluid bg-secondary">
@@ -103,20 +102,15 @@
         <p class="text-right">2019&copy; Все права защищены.</p>
     </div>
 </footer>
-{% block js %}
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'js/basket_scripts.js' %}"></script>
-    {#    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"#}
-    {#            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"#}
-    {#            crossorigin="anonymous"></script>#}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-            integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-            integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-            crossorigin="anonymous"></script>
-{% endblock %}
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
