--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -3,64 +3,63 @@
 {% block content %}
     <br>
     <div class="container ">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 ">
-                <form action="{% url 'mainapp:contact' %}" method="post">{% csrf_token %}
-                    <div class="card border-success mb-3">
-                        <div class="card-header text-center">
-                            <h1>Напишите нам</h1>
-                        </div>
-                        <div class="card-body text-center">
-                            <div class="input-group mb-3 ">
-                                {{ form.sender.errors }}
-                                {{ form.sender }}
-                                <div class="input-group-append">
-                                    <label class="input-group-text" id="basic-addon2" for="id_sender">E-mail:</label>
-                                </div>
-                            </div>
-                            <div class="input-group mb-3">
-                                <div class="input-group-append">
-                                    <label class="input-group-text" id="basic-addon2" for="id_subject">Тема:</label>
-                                </div>
-                                {{ form.subject.errors }}
-                                {{ form.subject }}
-                            </div>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <label class="input-group-text" for="id_message">Сообщение:</label>
-                                </div>
-                                {{ form.message.errors }}
-                                {{ form.message }}
-                            </div>
-                            <br>
-                            {{ form.copy.errors }}
-                            <label for="id_copy">Отправить копию себе {{ form.copy }}</label>
-                            <br>
-                            <button type="submit" class="btn btn-success">Отправить</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 ">
+	        <form action="">
                 <div class="card border-success mb-3">
+{#		            <img class="card-img-top img-fluid"  src="{% static 'img/logo_email.png' %}" height="10%" width="10%">#}
                     <div class="card-header text-center">
-                        <h1>Адрес</h1>
+		                <h1>Напишите нам</h1>
                     </div>
                     <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item"><p>Вы можете нам позвонить: 8 972 323 3234</p></li>
-                            <li class="list-group-item"><p>Мы находимся по адресу: Горд N, улица n-ская, дом 40</p></li>
-                            <li class="list-group-item"><p>Наш Email: raspberry_shop@shop.com</p></li>
-                        </ul>
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">Ваше имя</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="Email" class="form-control" value="{{ user.email }}">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">@example.com</span>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">Тема сообщения</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="">
+                        </div>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Ваш текст</span>
+                            </div>
+                            <textarea class="form-control" aria-label="With textarea"></textarea>
+                        </div>
+                        <br><button type="button" class="btn btn-success">Отправить</button>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="card border-success mb-3">
-                    <iframe src="https://yandex.ru/map-widget/v1/-/CBRTYHSLcB" width="100%" height="374px"
-                            frameborder="1" allowfullscreen="true"></iframe>
+	        </form>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="card border-success mb-3">
+                <div class="card-header text-center">
+                    <h1>Адрес</h1>
+                </div>
+                <div class="card-body">
+                 <ul class="list-group">
+                     <li class="list-group-item"><p>Вы можете нам позвонить: 8 972 323 3234</p></li>
+                     <li class="list-group-item"><p>Мы находимся по адресу: Горд N, улица n-ская, дом 40</p></li>
+                     <li class="list-group-item"><p>Наш Email: raspberry_shop@shop.com</p></li>
+                 </ul>
                 </div>
             </div>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card border-success mb-3">
+                <iframe src="https://yandex.ru/map-widget/v1/-/CBRTYHSLcB" width="100%" height="374px" frameborder="1" allowfullscreen="true"></iframe>
+            </div>
+        </div>
+    </div>
     </div>
 {% endblock %}
