--- a/adminapp/templates/adminapp/category_update.html
+++ b/adminapp/templates/adminapp/category_update.html
@@ -8,8 +8,8 @@
     <input class="form-control" type="submit" value="сохранить">
   </form>
   <button class="btn btn-round form-control last">
-    <a href="{% url 'admin_custom:users' %}">
-      к списку пользователей
-    </a>
+{#    <a href="{% url 'admin_custom:products' %}">#}
+{#      к списку пользователей#}
+{#    </a>#}
   </button>
 {% endblock %}
