--- a/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -5,7 +5,7 @@
         <a class="nav-link disabled" href="#">Категории:</a>
     </li>
     <li class="nav-item">
-        <a href="{% url 'product:category' 0 %}"
+        <a href="{% url 'product:page' 0 0 %}"
            class="nav-link {% if request.resolver_match.kwargs.pk == 0 %}
                 active
               {% endif %}">
@@ -14,7 +14,7 @@
     </li>
     {% for link in links_menu_prod %}
         <li class="nav-item">
-            <a href="{% url 'product:category' link.pk %}"
+            <a href="{% url 'product:page' link.pk 0 %}"
                class="nav-link {% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}
                   active
                 {% endif %}">
