--- a/adminapp/templates/adminapp/product_update.html
+++ b/adminapp/templates/adminapp/product_update.html
@@ -8,8 +8,8 @@
     <input class="form-control" type="submit" value="сохранить">
   </form>
   <button class="btn btn-round form-control last">
-    <a href="{% url 'admin_custom:users' %}">
-      к списку пользователей
+    <a href="{% url 'admin_custom:products' 0 %}">
+      к списку Товаров
     </a>
   </button>
 {% endblock %}
