--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -9,4 +9,24 @@
         Категория: "{{ category.name|title }}"
     </h2>
     {% include 'mainapp/includes/inc_products_menu.html' %}
+    <div class="container">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    {% if products.has_previous %}
+                        <a class="page-link" href="{% url 'product:page' category.pk products.previous_page_number %}">
+                            < {{ products.number }}
+                        </a>
+                    {% endif %}
+                </li>
+                <li class="page-item">
+                    {% if products.has_next %}
+                        <a class="page-link" href="{% url 'product:page' category.pk products.next_page_number %}">
+                            {{ products.number }} >
+                        </a>
+                    {% endif %}
+                </li>
+            </ul>
+        </nav>
+    </div>
 {% endblock %}
