Промежуточный этап выполнения 8 задания сигналы

--- a/basketapp/templates/basketapp/includes/inc_basket_list.html
+++ b/basketapp/templates/basketapp/includes/inc_basket_list.html
@@ -32,5 +32,10 @@
                 </div>
             </div>
         {% endfor %}
+        <button class="btn btn-round">
+            <a href="{% url 'basket:order_user' %}" class="btn btn-warning">
+                Заказать
+            </a>
+        </button>
     </div>
 </div>
